k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autumn-ingress
  namespace: apricotter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: autumn.apricotter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autumn
                port:
                  number: 3000
  tls:
    - hosts:
        - autumn.apricotter.com
      secretName: autumn-tls
